<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Clip Stack</string>
    <string name="clip_notification_title">%1$s</string>
    <string name="clip_notification_copy_button">Copy</string>
    <string name="clip_notification_share_button">Share</string>
    <string name="clip_notification_big_title">Recent clipboards</string>
    <string name="toast_copied">%1$s has copied</string>
    <string name="clip_notification_text">Expand to show more.</string>
    <string name="clip_notification_single_text">Click to add text.</string>
    <string name="share_clipboard_to">Share text to…</string>
    <string name="title_activity_main">"Clip Stack"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="title_activity_activity_setting">Settings</string>
    <string name="date_format">EEE, MMM dd</string>
    <string name="time_format">HH:mm</string>
    <string name="time_format_with_second">HH:mm:ss</string>
    <string name="title_activity_activity_editor">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="toast_deleted">Deleted.</string>
    <string name="action_refresh">Refresh</string>
    <string name="toast_saved">Saved.</string>
    <string name="toast_no_saved">Not saved.</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_dialog">Remember clipboards for:</string>
    <string name="pref_about_category">About</string>
    <string name="pref_about_title">Open Source</string>
    <string name="pref_about_summary">View source code on GitHub.</string>
    <string name="pref_app_setting_category">App Settings</string>
    <string name="pref_service_title">Service</string>
    <string name="pref_service_summary">Listen system clipboard in background.</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_pin_title">Pin Notification</string>
    <string name="pref_notification_pin_summary_on">Always show.</string>
    <string name="pref_notification_pin_summary_off">Only show when clipboard changed.</string>
    <string name="action_delete">Delete</string>
    <string name="pref_storage_summary_infinite">Remember clipboards forever.</string>
    <string name="pref_storage_summary_days">Remember clipboards for %d days.</string>
    <string name="title_activity_editor">New Clip</string>
    <string name="first_launch_clipboards_0">Welcome to Clip Stack. %1$s</string>
    <string name="first_launch_clipboards_1">It can show clipboard history in notification.</string>
    <string name="first_launch_clipboards_2">Click here %1$s to edit.</string>
    <string name="first_launch_clipboards_3">%1$s Swipe to delete. %2$s</string>
    <string name="title_activity_activity_get_share_text">Copy to clipboard</string>
    <string name="action_add">Add</string>
    <string name="action_delete_all">Clear all</string>
    <string name="dialog_delete_all">Are you sure you want to clear all?\nStarred items will be retained.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_undo">Undo</string>
    <string name="backup_file_name">"Clip Stack Backup "</string>
    <string name="backup_file_name_old">"Clipping Now Backup "</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="export_success">Export success: </string>
    <string name="export_failed">Export failed. Maybe no SD-card or it\'s full.</string>
    <string name="dialog_date_piker_from">From date:</string>
    <string name="dialog_date_piker_to">To date:</string>
    <string name="pref_notification_summary_on">Show notification.</string>
    <string name="pref_notification_summary_off">Don\'t show any notification.</string>
    <string name="title_activity_backup">Backup</string>
    <string name="switch_reverse_sort">Reverse sort</string>
    <string name="action_backup">Backup</string>
    <string name="dialog_description_are_you_sure">Are you sure?</string>
    <string name="progress_importing">Importing…</string>
    <string name="title_activity_new_backup">New Backup</string>
    <string name="title_backups">Backups</string>
    <string name="action_new_backup">New Backup</string>
    <string name="empty_card">No backup</string>
    <string name="toast_find_backup">%1$s backups in %2$s</string>
    <string name="clip_notification_text_old">Click to show more.</string>
    <string name="action_star">Starred</string>
    <string name="arrays_one_day">1 day</string>
    <string name="arrays_three_days">3 days</string>
    <string name="arrays_seven_days">7 days</string>
    <string name="arrays_thirty_days">30 days</string>
    <string name="arrays_infinite">infinite</string>
    <string name="clip_notification_starred_single_text">There is no starred items.</string>
    <string name="pref_storage_summary">Set clipboard history limit.</string>
    <string name="pref_rate_title">Rate me</string>
    <string name="pref_rate_summary">Rate this app if you think it\'s useful.</string>
    <string name="pref_notification_priority_title">Notification Priority</string>
    <string name="pref_notification_priority_summary">Set notification priority.</string>
    <string name="pref_click_title">Click Action</string>
    <string name="pref_click_summary">Set click &amp; long click actions.</string>
    <string name="pref_click_summary_false">Click to edit. Long click to copy.</string>
    <string name="pref_click_summary_true">Click to copy. Long click to edit.</string>
    <string name="pref_notification_priority_low">\nLow - without status bar icon.\nAt the end of notifications.\n</string>
    <string name="pref_notification_priority_middle">Middle - with status bar icon.\nAt the middle of notifications.</string>
    <string name="pref_notification_priority_high">\nHigh - with status bar icon.\nAt the top of notifications.\n</string>
    <string name="switch_only_starred_items">Only starred clipboards</string>
    <string name="switch_all_items">All clipboards</string>
    <string name="toast_service_temporary_stop">Service Paused.</string>
    <string name="toast_service_temporary_resume">Service resumed.</string>
    <string name="pref_floating_button">Floating Button</string>
    <string name="pref_floating_button_summary">Show floating button on screen.</string>
    <string name="accessibility_service_description" >Enable this service to get more feature:\n\n• Clip Stack will not be killed by system when RAM is not enough.\n• Show floating button of clipboards when typing on Android Lollipop +. (Not support browsers yet)\n• More features are coming soon.</string>
    <string name="pref_ping_floating_button">When to Show</string>
    <string name="pref_ping_floating_button_summary_always">Always show on screen.</string>
    <string name="pref_ping_floating_button_summary_typing">Only show when typing. (Not support browsers yet)</string>
    <string name="pref_ping_floating_button_summary">When to show floating button.</string>
    <string name="accessibility_dialog_title">Accessibility Require</string>
    <string name="accessibility_dialog_summary">This feature require accessibility permission. \nPlease enable it on Android settings.</string>
    <string name="accessibility_dialog_ok">Open Settings</string>

    <string name="action_comment">Add comments</string>
    <string name="action_tag">Add tag</string>
    <string name="action_label">Add or Change Label</string>
    <string name="title_activity_description_editor">Comment</string>
    <string name="toast_updated">Saved</string>
    <string name="toast_no_change">Not Saved</string>


</resources>
