<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:background="@color/set_off">

    <LinearLayout
        android:background="@color/primary"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/widget_title_text"
            android:text="@string/app_name"
            android:textSize="@dimen/abc_text_size_title_material_toolbar"
            android:textColor="@color/set_off"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/widget_title_star"
            android:src="@drawable/ic_action_star_white"
            android:background="@color/primary"
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:contentDescription="@string/action_star" />
        <ImageButton
            android:id="@+id/widget_title_add"
            android:src="@drawable/ic_widget_add"
            android:background="@color/primary"
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:contentDescription="@string/action_add" />

        </LinearLayout>

    <!--
    <LinearLayout
    -->
    <ListView
        android:id="@+id/widget_main_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

</LinearLayout>
