<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.catchingnow.tinyclipboardmanager.ActivityBackupNew$PlaceholderFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/background"
        android:orientation="vertical"
        android:layout_below="@id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/date_pickers_scroll_view"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/text_piker_from"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold"
                    android:text="@string/dialog_date_piker_from"
                    android:layout_gravity="center"
                    android:layout_marginBottom="-26dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scaleY="0.78"
                    android:scaleX="0.78"
                    android:id="@+id/date_picker_from"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/text_piker_to"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold"
                    android:text="@string/dialog_date_piker_to"
                    android:layout_gravity="center"
                    android:layout_marginBottom="-26dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scaleY="0.78"
                    android:scaleX="0.78"
                    android:id="@+id/date_picker_to"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_all_items"
                    android:checked="true"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:id="@+id/switch_only_starred_items" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_reverse_sort"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:id="@+id/switch_reverse_sort" />

                <Button
                    android:id="@+id/export_button"
                    android:text="@string/action_export"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/my_toolbar_shadow"
        android:layout_below="@id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />

</RelativeLayout>
