<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.catchingnow.tinyclipboardmanager.ActivityExport"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_piker_from"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold"
                    android:text="@string/dialog_date_piker_from"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:id="@+id/date_picker_from"
                    android:layout_gravity="center_horizontal" />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_piker_to"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold"
                    android:text="@string/dialog_date_piker_to"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:id="@+id/date_picker_to"
                    android:layout_gravity="center_horizontal" />

            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_reverse_sort"
        android:layout_margin="8dp"
        android:layout_marginTop="2dp"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:id="@+id/switch_reverse_sort" />

    <Button
        android:id="@+id/export_button"
        android:text="@string/action_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
